--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "10.11.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
     "test:run-server": "TEST_DATABASE=mytestdatabase npm start",
     "test:execute-test": "mocha --require @babel/register 'src/**/*.spec.js'",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo 'Tests require server to be running. Run npm run test:run-server in one terminal, then npm run test:execute-test in another.'"
   },
   "keywords": [],
   "author": "Jeff Maxwell <maxjeffwell@gmail.com>",
@@ -21,27 +21,27 @@
     "@babel/node": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
-    "axios": "^0.19.0",
+    "axios": "^1.10.0",
     "chai": "^4.2.0",
-    "mocha": "^6.2.1",
+    "mocha": "^11.7.1",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.3"
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
     "@babel/polyfill": "^7.6.0",
-    "apollo-server": "^2.9.4",
-    "apollo-server-express": "^2.14.2",
     "bcryptjs": "^2.4.3",
     "body-parser-graphql": "^1.1.0",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
-    "graphql": "^14.5.8",
+    "graphql": "^16.11.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.3.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5",
-    "validator": "^10.11.0"
+    "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
+    "validator": "^13.15.15"
   }
 }
